// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-upgrade-dependencies
on:
  schedule:
    - cron: 0 0 1 * *
  workflow_dispatch: {}
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@v2
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Synthesize project files
        run: npx projen
      - name: Upgrade package.json dependencies
        run: npx npm-check-updates --upgrade --reject projen
      - name: Upgrade yarn.lock dependencies
        run: yarn install && yarn upgrade --pattern !(projen)
      - name: Create Pull Request
        uses: peter-evans/create-pull-request@v3
        with:
          token: \${{ secrets.PROJEN_SECRET }}
          commit-message: Upgrade dependencies
          branch: github-actions/dependencies
          labels: \\"\\"
          title: \\"chore(deps): Upgrade dependencies\\"
          body: |-
            Upgrade dependencies

            ------

            *Automatically created by projen via GitHubActions*
"
`;

exports[`default options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-upgrade-dependencies
on:
  schedule:
    - cron: 0 8 * * *
  workflow_dispatch: {}
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@v2
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Synthesize project files
        run: npx projen
      - name: Upgrade package.json dependencies
        run: npx npm-check-updates --upgrade --reject projen
      - name: Upgrade yarn.lock dependencies
        run: yarn install && yarn upgrade --pattern !(projen)
      - name: Create Pull Request
        uses: peter-evans/create-pull-request@v3
        with:
          token: \${{ secrets.PROJEN_SECRET }}
          commit-message: Upgrade dependencies
          branch: github-actions/dependencies
          labels: pr/auto-approve
          title: \\"chore(deps): Upgrade dependencies\\"
          body: |-
            Upgrade dependencies

            ------

            *Automatically created by projen via GitHubActions*
"
`;
